--- a/index.html
+++ b/index.html
@@ -8,16 +8,34 @@
     <title>Webpack Package</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title"></h5>
+            <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body"></div>
+          <div class="modal-footer">
+            <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">
+              Читать полностью
+            </a>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+          </div>
+        </div>
+      </div>
+    </div>  
     <main class="flex-grow-1">
       <section class="container-fluid bg-dark p-5">
         <div class="row">
           <div class="col-md-10 col-lg-8 mx-auto text-white">
             <h1 class="display-3">RSS агрегатор</h1>
             <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
-            <form class="rss-from">
+            <form id="rss-form" class="rss-from" name="rss-form">
               <div class="form-row d-flex">
                 <div class="col me-2">
                   <input
+                    id="rss-input"
                     autofocus
                     required
                     name="url"
@@ -38,16 +56,14 @@
               </div>
             </form>
             <p class="text-muted my-1">Пример: https://ru.hexlet.io/lessons.rss</p>
-            <div class="feedback"></div>
+            <p class="feedback m-0 small text-success"></p>
           </div>
         </div>
       </section>
       <section class="container-fluid p-5">
         <div class="row">
-          <div class="col-md-10 col-lg-8 mx-auto feeds"></div>
-        </div>
-        <div class="row">
-          <div class="col-md-10 col-lg-8 mx-auto posts"></div>
+            <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
+            <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
         </div>
       </section>
     </main>
