add success status

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </div>
                 <div class="col-auto">
                   <button
+                    id="rss-submit"
                     type="submit"
                     aria-label="add"
                     class="btn btn-lg btn-primary px-sm-5"
